cmake_minimum_required(VERSION 3.10)
project(LC_cplusplus)

set(CMAKE_CXX_STANDARD 11)

add_executable(LC_cplusplus main.cpp Array/SearchInsertPosition_35/SearchInsertPosition.cpp Array/SearchInsertPosition_35/SearchInsertPosition.h Array/PlusOne_66/PlusOne.cpp Array/PlusOne_66/PlusOne.h Array/RotateArray_189/RotateArray.cpp Array/RotateArray_189/RotateArray.h "Cracking the Coding Interview/Arrays and Strings/CheckPermutation.cpp" Array/TwoSumInputArraySorted_167/Solution.cpp Array/PascalTriangle_119/Solution.cpp)